--- a/README
+++ b/README
@@ -1,10 +1,9 @@
-This project is developed using OCamlYacc and OCamlLex as part of CSL302 assignment.
-This interpreter supports Basic plolog relational Syntax.
+This project is developed in OCaml using OCamlYacc and OCamlLex for Parsing and Lexing.
+It supports basic prolog relational Iterpretation and the back-end computations are done mainly using pattern matching  and Most General Unifier algorithms. 
 
 software Reqirements:
 	OCaml environment 
 	NOTE: No Running prolog environment is required. 
-
 Commands:
 	type "make" and press ENTER to compile the project.
-	execute command ./run <file containing perl code>	
+	execute command ./run <file containing perl code>
